# projet_automate

./: CMakeLists.txt  automate_io.c  data_structure.c  main.c  pipeline.c
.cache/clangd/index/: automate_io.c.EEA67C47E3E5300E.idx  automate_io.h.E0D8617654FD4076.idx  data_structure.c.8114CBA067F90117.idx  data_structure.h.4947BF0919DCA63A.idx  main.c.5DF4AC572A66D7AA.idx  pipeline.c.B451AF5B0B4B507A.idx  pipeline.h.62D81A5B9FAED5D9.idx
data/: automate20.txt  automate22.txt  automate24.txt  automate25.txt  automate27.txt  automate29.txt  automate30.txt  automate44.txt
enc_temp_folder/e24894723f46ae25827c5b377f482/: main.c
include/: automate_io.h  data_structure.h  pipeline.h
